--- a/certify/config/hosts.conf
+++ b/certify/config/hosts.conf
@@ -46,7 +46,11 @@ host=host,root,root,/etc/grid-security,none
 # renewthreshold is in days
 renewthreshold=14
 subjectaltnames=email:jhover@bnl.gov
-
+email_on_replacement=True
+email_from = certify@manager01.racf.bnl.gov
+email_to = jhover@bnl.gov
+email_subject = Certificate Replacement
+smtp_host = rcf.rhic.bnl.gov
 
 
 #   EXAMPLE ONE: hostcert plus 3 service certificates with separate owners
