--- a/certify/setup.cfg
+++ b/certify/setup.cfg
@@ -9,6 +9,7 @@ requires = python, pexpect , pyOpenSSL >= 0.7
 build-requires= python-devel
 post-install=misc/rpm-post.sh
 #pre-uninstall=misc/rpm-preun.sh
+sign = 1
 
 [install]
 optimize=1
