--- a/config/certify.conf
+++ b/config/certify.conf
@@ -41,17 +41,6 @@ targetroot=~/certificates
 castring = Certify Self-Signing Certificate Authority
 cabits= 4096
 
-[vdtadminplugin]
-# information included in the generated certificate
-# e.g. 
-# email = jpackard@bnl.gov
-# vo = usatlas
-# affiliation = osg
-# ca = doegrids
-affiliation=osg
-vo=bnl
-ca=doegrids
-timeout=30
 
 # For development, none is set as passphrase and user will be queried on command line. 
 # For automated use on a secure system, it can be set. 
@@ -61,3 +50,7 @@ passphrase=none
 connecttimeout=3
 loginuser=root
 
+
+[osgadminplugin]
+testmode = True
+vo = usatlas
