--- a/certify/config/hosts.conf
+++ b/certify/config/hosts.conf
@@ -32,11 +32,7 @@
 # Information in this section will be substituted for other sections if they are 
 # not explicitly defined.
 [DEFAULT]
-cert_c=US
-cert_st=NY
-cert_l=Upton
-cert_o=BNL
-cert_ou=RACF
+
 cert_email=jhover@bnl.gov
 ioclass=LocalIOPlugin
 certclass=OpenSSLCertPlugin
@@ -52,7 +48,7 @@ email_to = jhover@bnl.gov
 email_subject = Certificate Replacement
 smtp_host = rcf.rhic.bnl.gov
 
-
+issuer_cn = DigiCert Grid CA-1
 
 #   EXAMPLE ONE: hostcert plus 3 service certificates with separate owners
 #   Uses default LocalIOPlugin and OpenSSLAdminPlugin
