--- a/config/hosts.conf
+++ b/config/hosts.conf
@@ -35,7 +35,7 @@
 
 cert_email=jhover@bnl.gov
 ioclass=LocalIOPlugin
-certclass=OpenSSLCertPlugin
+certclass=NoReqOpenSSLCertPlugin
 adminclass=OpenSSLAdminPlugin
 services=host
 host=host,root,root,/etc/grid-security,none
@@ -48,7 +48,7 @@ email_to = jhover@bnl.gov
 email_subject = Certificate Replacement
 smtp_host = rcf.rhic.bnl.gov
 
-issuer_cn = DigiCert Grid CA-1
+issuer_cn = DigiCert Grid CA-1, DOEGrids CA 1
 
 #   EXAMPLE ONE: hostcert plus 3 service certificates with separate owners
 #   Uses default LocalIOPlugin and OpenSSLAdminPlugin
@@ -64,7 +64,7 @@ issuer_cn = DigiCert Grid CA-1
 # Uses remote IO, and VDT to sign certs.
 # 
 #[piglet.mydomain.gov]
-#adminclass=VDTAdminPlugin
+#adminclass=OSGAdminPlugin
 #ioclass=SshIOPlugin
 #services=host,http
 #host=host,root,root,/etc/grid-security,none
@@ -84,10 +84,10 @@ issuer_cn = DigiCert Grid CA-1
 #
 #
 # EXAMPLE FOUR: simple hostcert for four different hosts
-#  Remote using VDT signing.
+#  Remote using OSG.
 #[grid08--11.mydomain.gov]
 #ioclass=SshIOPlugin
-#adminclass=VDTAdminPlugin
+#adminclass=OSGAdminPlugin
 
 
 
