--- a/config/hosts.conf
+++ b/config/hosts.conf
@@ -60,7 +60,7 @@ issuer_cn = DigiCert Grid CA-1, DOEGrids CA 1
 # gums=gums,daemon,daemon,/etc/grid-security,service
 #
 #
-# EXAMPLE TWO: Doegrids-signed host cert only with alias altname
+# EXAMPLE TWO: Digicert-signed host cert only with alias altname
 # Uses remote IO, and VDT to sign certs.
 # 
 #[piglet.mydomain.gov]
