--- a/config/hosts.conf
+++ b/config/hosts.conf
@@ -33,7 +33,7 @@
 # not explicitly defined.
 [DEFAULT]
 
-cert_email=jhover@bnl.gov
+cert_email=neo@matrix.com
 ioclass=LocalIOPlugin
 certclass=NoReqOpenSSLCertPlugin
 adminclass=OpenSSLAdminPlugin
@@ -41,27 +41,27 @@ services=host
 host=host,root,root,/etc/grid-security,none
 # renewthreshold is in days
 renewthreshold=14
-subjectaltnames=email:jhover@bnl.gov
+subjectaltnames=email:neo@matrix.com
 email_on_replacement=True
-email_from = certify@manager01.racf.bnl.gov
-email_to = jhover@bnl.gov
+email_from = certify@matrix.com
+email_to = trinity@matrix.com
 email_subject = Certificate Replacement
 smtp_host = rcf.rhic.bnl.gov
 
-issuer_cn = DigiCert Grid CA-1, DOEGrids CA 1
+issuer_cns = DigiCert Grid CA-1, DOEGrids CA 1
 
-#   EXAMPLE ONE: hostcert plus 3 service certificates with separate owners
-#   Uses default LocalIOPlugin and OpenSSLAdminPlugin
+#  EXAMPLE ONE: hostcert plus 3 service certificates with separate owners
+#  Uses default LocalIOPlugin and OpenSSLAdminPlugin
 # [hostname.domain.org]
+# adminclass=OpenSSLAdminPlugin
 # services=host,ldap,http,gums
 # host=host,root,root,/etc/grid-security,none
 # ldap=ldap,ldap,ldap,/etc/grid-security/ldap,service
 # http=http,apache,web,/etc/grid-security/http,service
 # gums=gums,daemon,daemon,/etc/grid-security,service
 #
-#
 # EXAMPLE TWO: Digicert-signed host cert only with alias altname
-# Uses remote IO, and VDT to sign certs.
+# Uses remote I/O and OSG to sign certs.
 # 
 #[piglet.mydomain.gov]
 #adminclass=OSGAdminPlugin
@@ -70,8 +70,6 @@ issuer_cn = DigiCert Grid CA-1, DOEGrids CA 1
 #host=host,root,root,/etc/grid-security,none
 #http=http,apache,apache,/etc/grid-security,http
 #certhostname=silversvc.usatlas.bnl.gov
-#subjectaltnames=DNS:myalias.acf.bnl.gov
-#
 #
 # EXAMPLE Three: self-signed host cert only, with different cert host name and alias.
 # Uses LocalIO and Self-signing Cert plugin.
@@ -81,7 +79,6 @@ issuer_cn = DigiCert Grid CA-1, DOEGrids CA 1
 #ldap=ldap,daemon,daemon,/etc/grid-security/ldap,ldap
 #subjectaltnames=DNS:owl.usatlas.bnl.gov
 #certhostname=owl-01.mydomain.gov
-#
 #
 # EXAMPLE FOUR: simple hostcert for four different hosts
 #  Remote using OSG.
